--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+/.idea/
+/__pycache__/
+/logs/__pycache__/
+*.log
+*.db3
+*.db3-journal
+/client/__pycache__/
+/server/__pycache__/
+*.key
+/doc/build/
+/unit_tests/__pycache__/
