--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.vscode/
 
 # C extensions
 *.so
@@ -55,16 +56,21 @@ cover/
 *.mo
 *.pot
 
+.vscode/
+
 # Django stuff:
 /logs/*.log
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+*.sqlite
+*.db
 
 # Flask stuff:
 instance/
 .webassets-cache
+
 
 # Scrapy stuff:
 .scrapy
@@ -128,6 +134,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.vscode
 
 # Spyder project settings
 .spyderproject
