--- a/server.ini
+++ b/server.ini
@@ -1,5 +1,6 @@
 [SETTINGS]
-database_path = 
-database_file = server_base.db3
+database_path = D:\python\chat_python
+database_file = server_base.sqlite
 default_port = 7777
 listen_address = 
+
